# raudio-bot

./: .gitignore  README.md  bot.py  raudio_config.json  requirements.txt  setup.cfg
raudio/: __main__.py  bot.py  config.py
raudio/modules/: BasicCommands.py  Music.py
raudio_bot/: __main__.py  bot.py  config.py
raudio_bot/modules/: BasicCommands.py
src/: bot.py
src/modules/: Music.py
