[metadata]
name = raudio-bot
version = 0.1.0.rc1
author = Raudio Project
author_email = ndlug@nd.edu
description = Self-hosted music streaming discord bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://raudio-project.github.io
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages =
	raudio_bot
	raudio_bot/modules
python_requires = >=3.7
install_requires =
	py-cord[voice]==1.7.3
	python-dotenv==0.20.0
	requests==2.27.1
